KStandardItemListWidget: select by number of unicode chars

Previously during rename, the number of QChar is used for selection,
which might be different from number of unicode characters.

Test plan:
- create the file zz❤️❤️.txt
- rename the file
- verify that the first 4 characters are correctly selected, which
  didn't work before the patch.

BUG: 466814